style: avoid column-gap, but avoid line wrapping too
replace `inline` with `inline-block`, as a better and closer alternative to `inline-flex`

--- a/packages/components-css/button-css/src/_mixin.scss
+++ b/packages/components-css/button-css/src/_mixin.scss
@@ -29,10 +29,10 @@
 
   /*
    * Button has formatted content but no icon or label elements. The display
-   * property should be inline, otherwise the column-gap is wrongly applied
+   * property should be inline-block, otherwise the column-gap is wrongly applied
    */
   &:has(> :where(:first-child)):not(:has(> :where(.nl-button__icon, .nl-button__label))) {
-    display: inline;
+    display: inline-block;
   }
 }
 
